bk_ida/gccida/g1/ggc_mark_trees
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_mark_trees/src/ggc-common.c:1157:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)v22 + 16)); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_mark_trees/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_mark_trees/src/ggc-common.c:1157:36: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)v22 + 16)); 
                       ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_mark_trees/src/obj/ggc-common.o] Error 1
